Rename and create

--- a/app/elements/coder/code-editor/code-editor.html
+++ b/app/elements/coder/code-editor/code-editor.html
@@ -76,7 +76,8 @@
 			listeners: {
 				'show-menu': '_showMenu',
 				'file-selected': '_fileSelected',
-				'rename': '_rename'
+				'rename': 'handleRename',
+				'create': 'handleCreate'
 			},
 			ready: function() {
 				this._addContextMenuListener();
@@ -116,18 +117,25 @@
 					this.selectedFile = undefined;
 				}
 			},
-			_rename: function(e, data){
-				if(data.from === data.to){
+			handleRename: function(e, detail) {
+				if (detail.from === detail.to) {
 					return;
 				}
-				if(!!this.tree.get(data.to)){
-					console.log('already exists');
+
+				if (this.tree.contains(detail.to)) {
 					return;
 				}
-				var value = this.tree.get(data.from);
-				this.tree.remove(data.from);
-				this.tree.add(data.to, value);
-				console.log(this.tree)
+
+				var value = this.tree.get(detail.from);
+				this.tree.remove(detail.from);
+				this.tree.add(detail.to, value);
+				this.notifyPath('tree', this.tree);
+			},
+			handleCreate: function(e, detail) {
+				if (this.tree.contains(detail.path)) {
+					return;
+				}
+				this.tree.add(detail.path);
 				this.notifyPath('tree', this.tree);
 			},
 			_fileSelected: function(e, detail) {
