Settings: fix url

--- a/app/elements/common/settings/settings-page.html
+++ b/app/elements/common/settings/settings-page.html
@@ -66,7 +66,7 @@
 						</div>
 						<div class="aligned-item">
 							<p>Your public username is the same as your profile address</p>
-							<p>https://app.cod.uno/profile/<span>{{user.username}}</span></p>
+							<p><a href="https://app.cod.uno/#!/u/[[user.username]]">https://app.cod.uno/#!/u/<span>[[user.username]]</span></a></p>
 						</div>
 					</div>
 					<div>
