--- a/app/elements/app-element.html
+++ b/app/elements/app-element.html
@@ -1,7 +1,8 @@
 <link rel="import" href="/elements/elements.html">
+<link rel="import" href="/styles/coduno.html">
 
 <dom-module id="app-element">
-	<style>
+	<style include="coduno-style">
 		:host {
 			display: block;
 			height: 100%;
