--- a/app/elements/company/challenge-template/challenge-template-list.html
+++ b/app/elements/company/challenge-template/challenge-template-list.html
@@ -6,7 +6,7 @@
 <dom-module id="challenge-template-list">
 	<style include="iron-flex">
 		.challenge-template-list {
-			padding: 10px;
+			padding: 0px 10px;
 			@apply(--layout-horizontal);
 			@apply(--layout-wrap);
 		}
