--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -2,6 +2,20 @@
 <script>
 window.addEventListener('WebComponentsReady', function() {
 	// COMMON
+	function parseQueryString(queryString) {
+		var params = {}, queries, temp, i, l;
+
+		// Split into key/value pairs
+		queries = queryString.split('&amp;');
+
+		// Convert the array of strings into an object
+		for ( i = 0, l = queries.length; i < l; i++ ) {
+			temp = queries[i].split('=');
+			params[temp[0]] = temp[1];
+		}
+		return params;
+	}
+
 	page('/', function() {
 		if (app.user.activeOrganization) {
 			page('/challengetemplates');
@@ -90,6 +104,10 @@ window.addEventListener('WebComponentsReady', function() {
 		Polymer.Base.importHref('/elements/company/challenge/challenge-detail.html', function(){
 			var page = document.createElement('challenge-detail');
 			page.challengeId = ctx.params.id;
+			var params = parseQueryString(ctx.querystring);
+			if (params.invite){
+				page.inviteCandidates();
+			}
 			app.swapContent(page);
 		});
 	});
