Edit team and challenge template detail refactor

--- a/app/elements/coder/team/user-teams-table.html
+++ b/app/elements/coder/team/user-teams-table.html
@@ -1,5 +1,6 @@
 <link rel="import" href="/bower_components/vaadin-grid/vaadin-grid.html">
 <link rel="import" href="/bower_components/iron-icons/iron-icons.html">
+<link rel="import" href="/bower_components/iron-icons/editor-icons.html">
 <link rel="import" href="/bower_components/iron-icons/social-icons.html">
 <link rel="import" href="/bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="/bower_components/iron-flex-layout/iron-flex-layout-classes.html">
@@ -7,6 +8,7 @@
 <link rel="import" href="/elements/common/data-providers/team/teams-for-user-provider.html">
 <link rel="import" href="/elements/coder/team/invite-to-team-modal.html">
 <link rel="import" href="/elements/coder/team/delete-team-modal.html">
+<link rel="import" href="/elements/coder/team/edit-team-modal.html">
 
 <dom-module id="user-teams-table">
 	<style include="iron-flex">
@@ -38,6 +40,7 @@
 		</vaadin-grid>
 		<invite-to-team-modal id="inviteToTeamDialog"></invite-to-team-modal>
 		<delete-team-modal id="deleteTeamDialog" on-team-deleted="_teamDeleted"></delete-team-modal>
+		<edit-team-modal id="editTeamDialog"></edit-team-modal>
 	</template>
 	<script>
 		// NOTE: username needs to be set for data to be shown.
@@ -72,6 +75,12 @@
 					}
 					cell.element.appendChild(element._createIconButton('social:group-add', function(){
 						var dialog = element.$.inviteToTeamDialog;
+						dialog.team = team;
+						dialog.toggle();
+						element.clickedOnOption = true;
+					}));
+					cell.element.appendChild(element._createIconButton('editor:mode-edit', function(){
+						var dialog = element.$.editTeamDialog;
 						dialog.team = team;
 						dialog.toggle();
 						element.clickedOnOption = true;
