--- a/app/elements/coder/challenge/tasks/endpoints/canvas-game-task.html
+++ b/app/elements/coder/challenge/tasks/endpoints/canvas-game-task.html
@@ -4,6 +4,7 @@
 <link rel="import" href="../../../../../../bower_components/paper-toast/paper-toast.html">
 <link rel="import" href="../../../../../../bower_components/iron-flex-layout/classes/iron-flex-layout.html">
 
+<!--TODO(victorbalan) adapt this task to our current model-->
 <!-- @deprecated -->
 <dom-module id="canvas-game-task">
 	<style>
